tests/tests/errors/2006-42.vb
'#compiler-options:/link:
'#compiler-message:Command line error BC2006 : option 'link' requires ':<file_list>'
'#exit-code:1